# ai-cognitive-env

./: .dockerignore  Dockerfile  LICENSE  README.md  benchmark.py  final_results.txt  final_verify.txt  inference.py  openenv.yaml  out.txt  out2.txt  pyproject.toml  r1.txt  r2.txt  requirements.txt  results.txt  run.ps1  test_score.py
app/: agents.py  environment.py  grader.py  logger.py  main.py  models.py  tasks.py
server/: app.py
